# dr_gins

./: CMakeLists.txt  package.xml  public  public.pub
common/: dr_gins_interface.cpp  dr_gins_interface.h  earth.h  file_io.h  math_utils.h  state_logger.cpp  state_logger.h  types.h
config/: dr_gins.rviz  dr_gins_config.yaml  dr_gins_config_canoe.yaml
core/: gins_eskf.cpp  gins_eskf.h  ins.cpp  ins.h
launch/: dr_gins.launch
log/: filter_covariance_diag.csv  filter_state.csv  ins_integration.csv  state_logger.cpp  state_logger.h
test/: CMakeLists.txt  test_pipeline.cpp
