<?xml version="1.0"?>
<package format="2">
  <name>dr_gins</name>
  <version>0.0.0</version>
  <description>The dr_gins package</description>
  <maintainer email="Geneta2580@gmail.com">Geneta</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>ublox_msgs</build_depend>
  <exec_depend>ublox_msgs</exec_depend>

  <export/>
</package>